# llm_manager

./: .gitignore  LICENSE  README.md  Test_LLMManager_01.ipynb  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/llm_manager/: __init__.py  base.py  exceptions.py  factory.py  rate_limit.py  reflection.py  retry.py  utils.py
src/llm_manager/prompts/: __init__.py  prompt_library.py  prompts.py
src/llm_manager/providers/: .gitignore  __init__.py  anthropic_client.py  bedrock_client.py  gemini_client.py  ollama_client.py  openai_client.py  provider_registry.py
tests/: conftest.py  test_exceptions.py  test_factory.py  test_factory_interchange.py  test_gemini_client.py  test_reflection.py  test_utils.py
