[project]
name = "llm-manager"
version = "0.1.0"
description = "LLM manager for all kinds of LLM models"
readme = "README.md"
authors = [{ name = "Dipak Rimal",email= "rimaldipak@gmail.com"}]
license = "MIT" 
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.64",
    "jupyter>=1.1.1",
    "lab>=8.5",
    "lag>=0.0.3",
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
