[project]
name = "llm-manager"
version = "0.1.0"
description = "LLM manager for all kinds of LLM models"
readme = "README.md"
authors = [{ name = "Dipak Rimal",email= "rimaldipak@gmail.com"}]
license = "MIT" 
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.64",
    "anthropic>=0.7.0",
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "pydantic>=2.5.0",
    "google-genai>=1.55.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.optional-dependencies]
gemini = [
    "google-genai",
]
